# SFT

./: .gitignore  CMakeLists.txt  README.md  String.h  sft_fixed_num.h  sft_input.h  sft_vector.h
C/: sft_fixed_num.h  sft_input.h  sft_logger.h  sft_vector.h
Cpp/: sft_fixed_num.hpp  sft_logger.hpp
include/Containers/: Container.h  Vector.h  def.h
include/Vector/: VecIO.h  Vector.h
outgoing/: sft_fixed_num.h
src/: String.c  VecIO.c  Vector.c
test/: test.c
